# running-homer

./: README.md  forge.config.js  index.html  package-lock.json  package.json  vite.config.ts  vite.main.config.mjs  vite.renderer.config.mjs
.github/workflows/: release.yml
images/: icon.icns
scripts/: create-icns.sh
src/: index.css  main.css  main.js  main.ts  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
