[package]
name = "running-homer"
version = "1.1.0"
description = "It's just a running Homer over your desktop"
authors = ["Jakub Vaněk <info@jakub-vanek.eu>"]
repository = "https://github.com/vanekj/running-homer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
